잘못된 문구 수정

--- a/TIL/react/호이스팅이란.md
+++ b/TIL/react/호이스팅이란.md
@@ -45,7 +45,7 @@ console.log(temp)
 ```
 위와같이 선언 전에 출력뿐만이 아니라 할당을 한 뒤 선언을 해도 문제가 되지 않는다.
 <br>이와 같은 기능은 편리해보일 수도 있으나 남용되면 메모리 자원적 관점에서 상당히 비효율적일 수 있다. (var의 단점)
-이외에도 var는 별게 다 된다! 심지어 <b>선언</b>까지도!
+이외에도 var는 별게 다 된다! 심지어 <b>중복 선언</b>까지도!
 
 ```javascript
 var temp = 1
