파이썬 특징 - 코드 규칙 부분 추가

--- a/TIL/Python/파이썬 특징.md
+++ b/TIL/Python/파이썬 특징.md
@@ -32,6 +32,23 @@
 
 ## 권장 코드 스타일 규격
 파이썬은 위 철학과 같은 이유로 문법을 굉장히 엄격하게 단속한다. 이는 파이참을 쓸때 뜨는 노란줄 만 봐도 알것이다..! 단어 사이 언더바는 물론 한줄의 최대 길이까지 정해져있다!
-<br>이런 문법을 자세히 정리해두고 권장해둔 것이 파이썬 공식문서에 있는데 이것이 바로 [PEP 8](https://www.python.org/dev/peps/pep-0008/) 이다
+<br>이런 문법을 자세히 정리해두고 권장해둔 것이 파이썬 공식문서에 있는데 이것이 바로 [PEP 8](https://www.python.org/dev/peps/pep-0008/) 이다. 
+다른 파이썬 개발자들과 원활한 협업과 가독성을 고려해서 해당 권장 스타일을 따르기 위해 노력해보자. 아래는 대표적인 스타일 가이드이다.
+* 명명규칙 스타일 가이드
+  * MODULE_CONSTANT_NAME = 0
+  * import module_name
+  * class ClassName()
+  * def function_name()
+  * variable_name = 0
+  * _protected_attribute_name = 0
+  * __hidden_attribute_name = 0
+* 문법에 대한 스타일 가이드
+  * 한 줄은 79글자로 제한하기 
+  * import는 파일의 맨 위에 적고 내장 모듈, 제3자 모듈, 직접 만든 모듈 순서로 불러들이기 
+  * 인스턴스 메서드의 첫 인자는 self로 쓰고, 클래스 메서드의 첫 인자는 cls로 쓰기 
+  * 할당 연산자(=)의 앞뒤로 공백 넣기
 
+내가 짠 코드가 PEP8을 잘 지키고 있는지 확인해주는 패키지도 있는데 대표적으로 <b>Flake8</b>이 있다. 
+코드 스타일을 자동으로 권장 사항에 맞춰 수정해주는 패키지도 있는데 바로 [Black](https://github.com/psf/black) 이다. 여기서 중요한 포인트는 이 Black 패키지를 개발하고 관리하는 곳이 <b>파이썬 소프트웨어 재단</b>이다.
+파이썬이 얼마나 코드 스타일 규격을 엄격하게 기준을 두고 가독성을 신경쓰고 있는지를 알 수 있는 부분이다.
 
