--- a/TIL/Python/파이썬의 객체지향.md
+++ b/TIL/Python/파이썬의 객체지향.md
@@ -1,14 +1,42 @@
 ### 순수 객체지향
 
-이썬에는 원시 타입(Primitive Type)이 존재하지 않으며, 모든 것이 객체로 취급된다. 나아가 클래스, 함수 역시 객체로 취급할 수 있다. 상수 역시 상수가 저장된 객체라고 본다. 다음과 같은 상수 할당문이 있을 때,
+파이썬에는 원시 타입(Primitive Type)이 존재하지 않으며, 모든 것이 객체이다. 나아가 클래스, 함수 역시 객체로 취급할 수 있다. 상수 역시 상수가 저장된 객체라고 본다. 다음과 같은 상수 할당문이 있을 때,
 ```Python
 x = 10
 ```
 
 
-이는 변수 x 자체에 10이 할당된 것이 아니라 x가 10이 저장된 상수 객체를 가리키는 것을 의미한다. 내부적으로는 C의 포인터 연산과 같은 동작이 행해지는 것이다. 이렇게 x에 대입되는 값을 변경할 경우,
+이는 변수 x 자체에 10이 할당된 것이 아니라 x가 10이 저장된 상수 객체를 가리키는 것을 의미한다. 내부적으로는 C의 포인터 연산과 같은 동작이 행해지는 것이다. ~~처음 알았다!~~ 이렇게 x에 대입되는 값을 변경할 경우,
 ```Python
 x = 10
 x = 20
 ```
 x가 가리키는 대상이 10이 저장된 상수 객체에서 20이 저장된 상수 객체로 바뀐 것이다. x 자체의 값이 10에서 20으로 바뀐 게 아니다.
+
+파이썬3 표준 타입 계층 구조는 아래와 같다.
+
+* None
+* 숫자
+    * 실수 (class floot)
+    * 정수형
+        * 정수 (class int)
+        * 정수 (class bool)
+* 시퀀스
+    * 불변
+        * 문자열 (class str)
+        * 튜플 (class tuple)
+        * 바이트 (class bytes)
+    * 가변
+        * 리스트 (class list)
+* 집합형
+    * 집합 (class set)
+* 매핑
+    * 딕셔너리 (class dict)
+
+파이썬은 크게 불변 객체와 가변 객체로 나눠진다.
+불변 객체에는 숫자, 문자열, 바이트, 튜플 등이 있다. 이 네가지를 재외한 나머지 객체 (리스트 등)은 모두 가변 객체이다.
+가변 객체는 값을 수정할 수 있으며 불변 객체의 값을 수정 할 때는 <b>바뀐 값이 저장된 새로운 객체를 생성하고 생성 된 객체로 참조 대상을 옮기는 식</b>으로 동작한다.
+이와 같은 특징 때문에 파이썬은 <b>순수 객체 지향언어</b>라고 할 수 있다.
+
+여기서 주의해야 할 점은 객체지향 언어라고 해서 항상 객체지향인 것은 아니다. 객체지향은 <b>프로그래밍의 패러다임으로 더 넓은 범주에 속한다!</b>
+<b>파이썬으로 작성된 코드가 절차 지향적일 수도 있으며 함수형 프로그래밍일 수도 있기</b> 때문이다. 즉 무조건적으로 객체지향 == 파이썬이 아님을 명심하자!
