--- a/TIS/파이썬_002(괄호 변환).md
+++ b/TIS/파이썬_002(괄호 변환).md
@@ -1,4 +1,4 @@
-###[카카오 코딩테스트 - 괄호 변환](https://programmers.co.kr/learn/courses/30/lessons/60058)
+### [카카오 코딩테스트 - 괄호 변환](https://programmers.co.kr/learn/courses/30/lessons/60058)
 
 ```python
 def solution(p):
@@ -29,6 +29,6 @@ def solution(p):
 #### 1일차 풀이 방법
 매우 간단하게 그냥 현재 괄호의 순서를 기준으로만 '(' 또는 ')'으로 변환 될 수 있도록 코드를 짜보았다.
 예제 테스트는 통과하였지만 정답 테스트에서는 절반 가량이 실패하여 문제를 다시 확인해보니 문제에서 요구하는데로 진행하면
-")()(()" => "((()))" 이렇게 변환이 되어야 하지만 내 코드는 "()()()" 이렇게 변환이 된다. ~~~어쩐지 카카오 치고 문제가 너무 쉽더라니..~~~ 
+")()(()" => "((()))" 이렇게 변환이 되어야 하지만 내 코드는 "()()()" 이렇게 변환이 된다. ~~어쩐지 카카오 치고 문제가 너무 쉽더라니..~~ 
 문제의 의도 자체를 잘못파악했었던 문제였다..
-오늘은 명절을 내느라 운전도 많이하고 너무 바빠서 일찍 자야할 거 같아 이 문제는 늘 그렇듯 내일의 용은재에게 한 번 맡겨보고자한다. ~~~화이팅 내일의 용은재~~~
+오늘은 명절을 내느라 운전도 많이하고 너무 바빠서 일찍 자야할 거 같아 이 문제는 늘 그렇듯 내일의 용은재에게 한 번 맡겨보고자한다. ~~화이팅 내일의 용은재~~
