--- a/TIS/파이썬_002(괄호 변환).md
+++ b/TIS/파이썬_002(괄호 변환).md
@@ -1,4 +1,4 @@
-### [카카오 코딩테스트 - 괄호 변환](https://programmers.co.kr/learn/courses/30/lessons/60058)
+#### [카카오 코딩테스트 - 괄호 변환](https://programmers.co.kr/learn/courses/30/lessons/60058)
 
 ```python
 def solution(p):
@@ -29,6 +29,153 @@ def solution(p):
 #### 1일차 풀이 방법
 매우 간단하게 그냥 현재 괄호의 순서를 기준으로만 '(' 또는 ')'으로 변환 될 수 있도록 코드를 짜보았다.
 예제 테스트는 통과하였지만 정답 테스트에서는 절반 가량이 실패하여 문제를 다시 확인해보니 문제에서 요구하는데로 진행하면
-")()(()" => "((()))" 이렇게 변환이 되어야 하지만 내 코드는 "()()()" 이렇게 변환이 된다. ~~어쩐지 카카오 치고 문제가 너무 쉽더라니..~~ 
+")()(()" => "((()))" 이렇게 변환이 되어야 하지만 내 코드는 "()()()" 이렇게 변환이 된다. ~~어쩐지 카카오 치고 문제가 너무 쉽더라니..~~
 문제의 의도 자체를 잘못파악했었던 문제였다..
 오늘은 명절을 내느라 운전도 많이하고 너무 바빠서 일찍 자야할 거 같아 이 문제는 늘 그렇듯 내일의 용은재에게 한 번 맡겨보고자한다. ~~화이팅 내일의 용은재~~
+
+---
+```python
+def solution(p):
+    answer = ''
+
+    while p != '':
+        u, p = separator(p)
+
+        if check_valid_parenthesis(u):
+            answer += u
+        else:
+            p = solution(p)
+            answer += processing(u, p)
+            p = ''
+
+    return answer
+
+def check_valid_parenthesis(parenthesis):
+    temp_count = 0
+    is_valid_string = True
+    for spell in parenthesis:
+        if spell == '(':
+            temp_count += 1
+        elif spell == ')':
+            temp_count -= 1
+
+        if temp_count < 0:
+            is_valid_string = False
+            break
+
+    return is_valid_string
+
+def processing(u, p):
+    final_p = '(' + p + ')'
+    final_u = ''
+
+    for spell in u[1:-1]:
+        final_u += '(' if spell == ')' else ')'
+    return final_p + final_u
+
+def separator(parenthesis):
+    parenthesis_count = 0
+    has_complete = False
+    v = ''
+    u = ''
+
+    for spell in parenthesis:
+        if has_complete:
+            v += spell
+            continue
+
+        if spell == '(':
+            parenthesis_count += 1
+            u += '('
+        else:
+            parenthesis_count -= 1
+            u += ')'
+
+        if parenthesis_count == 0:
+            has_complete = True
+
+    return u, v
+```
+
+#### 2일차 풀이방법
+우선 문제 자체에 풀이에 도움이 되는 힌트를 찾았다. 문제 설명에 아래와 같이 <b>알고리즘 프로세스</b>가 적혀있어서 이걸 그대로 코드로 구현만 하면 되는 문제였던 것이다..! ~~이걸 몰랐던 나는 바보같이 문제도 잘못 이해해서 1일차에 삽질을 하고 오늘의 나에게 해결을 떠 넘겼던 것이다!~~<br>
+<img src=https://user-images.githubusercontent.com/96015600/153404479-f3f051b2-386a-4d9c-8dec-8fd0d880fc4c.png width=630, height=270><br>
+
+그래서 2일차에선 비교적 수월하게 문제를 풀었는데 저걸 깨닫고 나서 문제를 이해하고나니 20분도 채 되지 않고 문제를 풀었던 거 같다.<br>
+사설은 그만 하고 코드에 대해서 설명하자면 가장 먼저 <b>solution</b>이라는 함수에서 경우에 따라 스스로를 호출하여(재귀함수) 조건에 충족하면 answer이라는 변수를 반환하게끔 하는 최상위 함수이다.
+이때 조건은 문자열 w를 나누어 u와 v로 나누게 되는데 u가 "올바른 괄호 문자열" 인지 아닌지에 따라 나누어지게 된다. 그렇기 때문에 가장 먼저 할 일은 w를 조건에 맞게끔 나누는 것이었는데 이 작업을 <b>separator</b>함수가 담당해서 처리해준다. 아래는 separator함수의 코드이다.
+
+```python
+def separator(parenthesis):
+    parenthesis_count = 0
+    has_complete = False
+    v = ''
+    u = ''
+
+    for spell in parenthesis:
+        if has_complete:
+            v += spell
+            continue
+
+        if spell == '(':
+            parenthesis_count += 1
+            u += '('
+        else:
+            parenthesis_count -= 1
+            u += ')'
+
+        if parenthesis_count == 0:
+            has_complete = True
+
+    return u, v
+```
+separator는 괄호로 구성되어있는 문자열을 parenthesis 변수에 받는것으로 시작된다. 이때 parenthesis 변수를 u와 v로 나누는 기준은 균형잡인 괄호 문자열이 나올때까지로 나누면 된다.
+<br>여기서 균형잡인 괄호 문자열은 '()', '(())', ')(', '))((' 와 같이 괄호 순서와는 상관없이 괄호 쌍이 맞는 문자열을 말한다'<br>
+그로므로 '())(' 를 나누면 '()', ')(' 이렇게 되는 것이고 '(()))('를 나누면 '(())'과 ')('로 나눠지는 것이다.
+
+이 부분을 어떻게 코드로 구현할지 고민을 하던 도중 count 변수를 하나 만들어 괄호를 한개씩 검사할 때 '('이면 + 1 을 그 반대라면 -1을 한 뒤 count 변수가 0이 되는 시점을 분기점으로 나누면 되겠다고 생각하였다.
+그래서 for문에서 괄호를 한개 구분해가며 parenthesis_count 변수에 1을 더하거나 빼다가 0이 되는 시점에 분리가 완료되었다는 의미로 has_complete 변수에 값을 True로 바꿔준다.
+이후 has_complete이 True인 경우는 u 변수 구성이 끝난 것이기 때문에 나머지 괄호들을 v에 저장한 뒤 u와 v를 최종적으로 반환하는식으로 동작한다.
+
+```python
+def check_valid_parenthesis(parenthesis):
+    temp_count = 0
+    is_valid_string = True
+    for spell in parenthesis:
+        if spell == '(':
+            temp_count += 1
+        elif spell == ')':
+            temp_count -= 1
+
+        if temp_count < 0:
+            is_valid_string = False
+            break
+
+    return is_valid_string
+```
+그 다음으로 할 것은 separator 함수에서 반환 한 u가 <b>"올바른 괄호 문자열"</b>인지 체크하는 부분이다. 위에서 받은 u를 check_valid_parenthesis 함수에서 parenthesis변수로 받은 후 
+문자열을 한 번씩 돌며 '(' 보다 ')'개수가 더 많아지는 순간이 있는지를 체크한다. 만약 있다면 해당 문자열은 "올바른 괄호 문자열"이 아니므로 False를 반환 그 반대라면 True를 반환한다.
+
+```python
+if check_valid_parenthesis(u):
+    answer += u
+else:
+    p = solution(p)
+    answer += processing(u, p)
+    p = ''
+```
+이후 다시 solution 함수로 돌아와서 u가 "올바른 문자열" 일때는 최종 정답의 뒷 부분에 u를 더해주고 아니라면 solution 스스로를 호출하여 문제에서 요구한대로 v에 대해 처음부터 재귀적으로 수행을 시키고 그 결과를 p라는 변수에 받는다.
+
+마지막으로 문제에서 요구하는대로 p의 앞에 '('를 붙이고 뒤에 ')'붙인 후 u의 첫번째, 마지막 괄호를 제거 후 u의 괄호를 반전시켜 p와 u에 더해준다 라는 처리를 해주기 위해 processing 함수를 호출한다.
+아래는 processing 함수이며 이 함수는 간단한 구조이기 때문에 별도로 설명은 생략하도록 하겠다.
+```python
+def processing(u, p):
+    final_p = '(' + p + ')'
+    final_u = ''
+
+    for spell in u[1:-1]:
+        final_u += '(' if spell == ')' else ')'
+    return final_p + final_u
+```
+이렇게 processing까지 마친 후 answer에 처리된 p와 u를 더하는 것으로 작업이 마무리가 된다. 이번에는 그래도 [첫번째 코딩테스트 문제 (기능개발)](https://github.com/dev-jay-yong/TIL-TID-TIW/blob/main/TIS/%ED%8C%8C%EC%9D%B4%EC%8D%AC_001(%EA%B8%B0%EB%8A%A5%EA%B0%9C%EB%B0%9C).md)
+을 풀때보단 코드를 깔끔하게 짠 것 같아서 마음에 든다. 오늘은 문제를 열심히 풀고 정리를 해보았으니 다음에는 다른 사람들의 풀이를 분석하고 내 코드와 비교하여 수정되어야 할 점, 배워야 할 점을 갖는 시간으로 돌아오겠다.
