--- a/TIL/Python/파이썬의 함수형 프로그래밍.md
+++ b/TIL/Python/파이썬의 함수형 프로그래밍.md
@@ -118,3 +118,8 @@ print(add_function(10)) # 결과 210
 4. 모든 함수가 순수할 수 없음
 5. 순수함수를 구현하기 위해서 코드의 가독성이 좋지 않을 수 있음
 6. 함수형 프로그래밍에서 for문을 재귀함수로 대체하는 과정에 무한 루프에 빠질 수 있음
+---
+#### 출처
+1. [JONGMINFIRE.DEV 기술블로그](https://jongminfire.dev/%ED%95%A8%EC%88%98%ED%98%95-%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D%EC%9D%B4%EB%9E%80)
+2. [망나니개발자님 기술블로그](https://mangkyu.tistory.com/111)
+3. [2018 파이콘 - 하원호 (Las)님의 발표](https://www.youtube.com/watch?v=UPmQHHpS3cw)
