--- a/TIS/파이썬_003(사탕 나누기).md
+++ b/TIS/파이썬_003(사탕 나누기).md
@@ -1,4 +1,4 @@
-### 코딩테스트 - 사탕나누기
+### [삼성 코딩테스트 - 사탕 분배](https://swexpertacademy.com/main/code/problem/problemDetail.do?contestProbId=AX8BB5d6T7gDFARO&categoryId=AX8BB5d6T7gDFARO&categoryType=CODE&problemTitle=&orderBy=FIRST_REG_DATETIME&selectCodeLang=ALL&select-1=&pageSize=10&pageIndex=1)
 
 오늘은 제가 훈련소에 있을때 회사 동료분이 인편으로 보내주신 문제를 풀어볼 예정입니다.
 손코딩으로 풀었다보니 코드가 조금 더 난잡해 보일 수 있는 점은 참고 부탁드립니다. 또한 아래부터는 편의를 위해
@@ -96,3 +96,37 @@ for count in range(1, test_count + 1):
 ```
 그냥 ```result_a = (2 * a) * (2 ** (k - 1)) % (a + b)``` 이 부분 자체가 너무 느리다.. 고로 내일은 이 부분을 어떻게든 개선을 시도해보는도록 하겠다.
 ~~사실 이걸 정리하면서 발견하자마자 개선을 시도했지만 2시간 시도 결과 실패했다..~~
+
+### 세번째 풀이 방법
+우선 위 2번째 풀이방법 중 2 ** (k -1)의 부분이 너무 느린것을 줄이기위해 집중했다.
+우선 2의 k 제곱을 구하기위해 k번 반복을 한다라는 사실을 깨달았고 이는 너무 비효율적이다라는 생각에 개선하고자 했다.
+우선 numpy의 np.power나 math.pow 또는 ** 과 같은 방법으로 단순 계산했을때는 k가 너무 컸을때 에러가 발생하거나 너무 느리다는 문제가 있었다.
+결과적으로 직접 이 문제를 해결해보고자 하였고 아래와 같은 방법으로 제곱수를 구해준다면 되는것을 알게되엇다..
+```
+숫자 a와 k가 주어질때 a의 k제곱은 아래와 같이 구할 수 있다
+k가 1일때 => a = 1
+k가 짝수일때 => (a ** (k/2)) ** 2
+k가 홀수일때 => (a ** (k/2)) ** 2 * a
+```
+위와 같은 방법으로 연산 할 경우 a와 k가 각각 2와 10이라고 가정했을때 
+for문으로는 10번 해야할 작업이 3번만에 완료되게 된다. 즉 b가 커졌을때 훨씬 효율적으로 동작한다는 것!
+이 논리를 코드로 적용하면 아래와 같다.
+
+```python
+test_count = int(input())
+def power(a, b):
+    if b == 1:
+        return 1
+    temp = power(a, b//2)
+    return temp * temp if b % 2 == 0 else temp * temp * a
+
+for count in range(1, test_count + 1):
+    a, b, k = map(int, input().split())
+    result_a = (2 * a) * (power(2, (k - 1))) % (a + b)
+    result_b = (a + b) - result_a
+    print(f'#{count} {min(result_a, result_b)}')
+```
+
+하지만 놀랍게도 이 코드를 삼성 모의테스트로 체크해보면 메모리 에러가 난다.. ㅠㅠ
+
+스택 메모리 1MB와 150개 테스트케이스 3초 이내 동작완료가 너무 어려운것 같다... 우선 출근시간이 되었으므로 남은 부분은 퇴근 후 시도해보도록 하겠다.
