--- a/TIL/Programming_Engineering/비동기 프로그래밍.md
+++ b/TIL/Programming_Engineering/비동기 프로그래밍.md
@@ -1,1 +1,31 @@
+## [파이썬] 비동기 프로그래밍
+프로그래밍의 패러다임 변화 중 한가지인 동시프로그래밍에서 비동기프로그래밍으로의 변화에 대해 왜, 어떻게 변하는지 알아보도록 하자.
+
+### 동시 프로그래밍이란?
+동시 프로그래밍(concurrent programming)은 여러 개의 쓰레드를 활용하여 이루어져있다. 이를 통해 여러개의 일을 <b>동시에 실행되는 것 같이 보이는 것</b>처럼 동작한다.
+하지만 실제는 그렇지 않는데 예시를 들어서 설명을 해보겠다. 아래 그림을 확인해보자.
+
+![동시성과병렬성.png](https://user-images.githubusercontent.com/96015600/163803101-a08e1a92-c47d-4646-aabf-f13ab6a776f4.png)
+가장 왼쪽부터 각각 순차적, 동시성, 병렬성을 토대로 처리를 하게 되었을때의 과정이다.
+* Sequential(순차) : 하나의 작업을 끝까지 완료 한 후 다음 작업을 진행한다.
+* Concurrent(동시) : 두개의 작업을 번갈아가며 진행한다. 이때 다른 작업으로 바꾸어 실행할 때마다 내부적으로는 Context switch가 일어난다.
+* Parallel(병렬) : 멀티 코어를 통해 두개의 작업을 한 번에 처리한다.
+
+즉 흔히들 착각하는 동시성과 병렬성은 위 와같은 차이가 존재하는 것이다. 동시성은 논리적으로 <b>많은 것</b>을 처리 한다면 병렬성은 물리적으로 한 번에 많은 <b>일</b>을 처리 하는것을 의미한다.
+위에서 나온 <b>Context switch</b>는 다음에 더 자세히 다루어 보겠다.
+
+### 동시 프로그래밍의 패러다임 변화
+동시프로그래밍은 위에서 설명하듯 결국 여러개의 쓰레드를 활용하여 작업을 처리한다. 하지만 쓰레드를 이용하여 작업할 경우 thread safe한 프로그램을 작성하는 것은 생각보다 쉬운 일이 아니다.
+특히나 싱글코어 프로세서에서 프로그램을 돌릴 경우 동시 처리에 따른 성능 향상이 미미하거나 오히려 저하되는 경우도 발생하게 된다.
+
+이러한 문제들로 인하여 최근에는 하나의 쓰레드를 통해 동시 처리를 하는 비동기 프로그래밍(asynchronous programming)이 주목받고있다.
+
+### 비동기 프로그래밍
+웹 서버와 같은 애플리케이션의 경우 CPU 연산 비용보다 DB나 API 연동 등 네트워크과정에서 발생하는 대기 시간이 훨씬 길다.
+이러한 문제를 개선하기 위해 비동기 프로그래밍은 대기 시간을 없애고 해당 시간에 CPU가 다른 처리를 할 수 있도록한다.
+이러한 작업을 흔히 <b>"non-blocking하다"</b>라고 표현한다.
+
+js와 같이 초기부터 비동기 방식으로 동작하도록 설계된 언어와는 달리 파이썬과 같이 기본적으로 동기 방식으로 동작하는
+언어의 경우 이 개념이 생소하게 느껴질 수 있다. 하지만 파이썬 3.4에서 부터 ```asyncio```가 표준 라이브러리로 추가된 후 
+3.5부터 ```async/await```키워드가 문법으로 채택되어 파이썬도 자체적으로 비동기 프로그래밍이 가능해졌다.
 
