비동기형 프로그래밍 출처 추가

--- a/TIL/Programming_Engineering/비동기 프로그래밍.md
+++ b/TIL/Programming_Engineering/비동기 프로그래밍.md
@@ -70,7 +70,7 @@ loop.close()
 # python 3.7 이상 버전
 asyncio.run(main_async())
 ```
-
+---
 ### 실제 코드로 비교해보기
 이제 사용자 관리 애플리케이션을 흉내내는 실습 코드를 작성하여 동기와 비동기 처리를 비교해보겠습니다.
 이 글의 대부분은 <b>DaleSeo</b>님의 글을 참조하였으며 지금 진행 할 실습 프로젝트 설정역시 <b>DaleSeo</b>님의 설정을 그대로 참고하여 진행하겠습니다.
@@ -123,7 +123,7 @@ if __name__ == '__main__':
 두번째 함수가 실행, 완료 후 세번째 함수가 실행 완료되는 과정을 거치는 것이다. 즉, 한 사람을 조회하는데 1초의 시간이 소요된다고 가정할 때 
 첫번째 요청은 3초 2번째 요청은 5초 (3+2), 세 번째 요청은 6초(3 + 2 + 1)가 걸리게 된다. 실제 사용자라면 늦게 요청을 보낸 사람은 앞선 사람들만큼
 대기 시간이 길어지기 때문에 트래픽이 조금만 쌓여도 문제가 발생될 것이다.
-
+---
 ### 비동기 프로그래밍
 위에서 작성된 동기 함수와 다르게 비동기 함수는 ```async/await``` 키워드를 사용하여 한 번 비동기 처리될 수 있도록 개선해보았다.
 기존의 함수 선언에 ```async```를 붙여 비동기 함수(coroutine)로 변경하였으며, 
@@ -186,3 +186,11 @@ if __name__ == '__main__':
 ### 정리
 오늘은 동시프로그래밍과 비동기프로그래밍에 대해 간략하게 알아보았다. DaleSeo님께서 잘 정리해주신 덕분에 알 수 있었던게 많았고
 공부해야할 것들도 많이 생긴 것 같다. 우린 얼마나 효율적으로 코딩을 하고있을까라는 의문을 던지며 비동기 프로그래밍과 같은 기법을 적용하여 코딩 효율성을 높여보자.
+
+
+---
+### 출처
+[DaleSeo님 개발 블로그](https://www.daleseo.com/python-asyncio/) <br>
+[곰팡님 개발 블로그](https://gompangs.tistory.com/entry/OS-Thread-Safe%EB%9E%80) <br>
+[IT 엘도라도님 개발 블로그](https://it-eldorado.tistory.com/159) <br>
+[Smart Tiger님 개발 블로그](https://seamless.tistory.com/42)
