테스트 코드.md 파일 오타 수정

--- a/TIL/Programming_Engineering/테스트코드.md
+++ b/TIL/Programming_Engineering/테스트코드.md
@@ -2,7 +2,7 @@
 
 ### 개요
 오늘은 테스트코드에 대해서 알아 볼 것이다. 사실 테스트코드를 작성한 경험은 많았지만 제대로 공부하고 작성을 한 적은 없었다.
-그러다보니 테스트코드이 유지보수나 커버리지등 여러 부분에서 지속적으로 문제가 발생했었다. 이러한 문제를 많이 늦었지만 지금이라도 고치기 위하여 오늘은 테스트코드에 대해서 알아 볼 것이다.
+그러다보니 테스트코드의 유지보수나 커버리지등 여러 부분에서 지속적으로 문제가 발생했었다. 이러한 문제를 많이 늦었지만 지금이라도 고치기 위하여 오늘은 테스트코드에 대해서 알아 볼 것이다.
 
 이번 글은 [파이콘 2018 한성민님 발표](https://www.youtube.com/watch?v=S5SY2pkmOy0) 와 여러 기술블로그를 참고하여 만들었다.
 
@@ -10,6 +10,7 @@
 
 ### 테스트 코드는 왜 필요할까?
 가장 원초적인 질문을 던져보자. 테스트코드는 왜 필요할까? 아래 사진과같은 product 구조에 새로운 메소드를 추가한다고 가정해보자.
+
 <img width="1134" alt="테스트코드1" src="https://user-images.githubusercontent.com/96015600/164889916-f2621ce5-cbd7-4c9c-8a3f-4539982e58ca.png">
 (이미지 출처 [파이콘 2018 한성민님 발표](https://www.youtube.com/watch?v=S5SY2pkmOy0))
 
@@ -58,7 +59,7 @@
   
 
 테스트코드를 처음으로 구축하는 단계라면 대게는 단위 테스트부터 코드작성을 시작하며 필자도 그걸 추천하는 편이다.
-테스트코드의 고도화 순서는 대게 단위 -> 통합 -> E2E 순으로 개발하는 것이 좋다고 평가한다.
+테스트코드의 고도화 순서는 단위 -> 통합 -> E2E 순으로 개발하는 것이 좋다고 평가한다.
 세부적인 기능 부터 확실한 안정화 작업을 완료한 뒤 다음단계로 넘어가는 것이다.
 
 ---
