Update 소프트웨어 개발 생명주기 모델.md

--- a/TIL/Programming_Engineering/소프트웨어 개발 생명주기 모델.md
+++ b/TIL/Programming_Engineering/소프트웨어 개발 생명주기 모델.md
@@ -19,8 +19,10 @@
   * 각 진행단계에서 문제 발생시 그 이전단계로 피드백이 되는 경우가 발생함.
 > 절차 - 타당성 검토 > 계획 > 요구사항 분석 > 설계 > 구현 > 테스트 > 유지보수
 
-![폭포수모델](https://user-images.githubusercontent.com/96015600/167116606-d0a46614-176b-40d1-8113-ed3c92827e6b.png)
+![폭포수모델](https://user-images.githubusercontent.com/96015600/167116606-d0a46614-176b-40d1-8113-ed3c92827e6b.png) <br>
 출처 : 소프트웨어 공학 [최은만 저, 정익사]
+
+
 ---
 
 ### 프로토타입 모델
@@ -36,15 +38,40 @@
 사전에 주의가 필요하다.
 
 * 장점
-  * 프로토 타입 모델은 결함이 훨씬 더 일찍 발견되기 때문에 개발 비용과 시간을 줄여준다.,
+  * 프로토타입 모델은 결함이 훨씬 더 일찍 발견되기 때문에 개발 비용과 시간을 줄여준다.,
   * 누락 된 기능이나 요구 사항의 변경은 평가 단계에서 식별 할 수 있으므로 개선 된 프로토 타입에서 구현할 수 있다.
   * 초기 단계부터 고객이 참여하면 요구 사항이나 기능에 대한 이해의 혼동이 줄어 듭니다.
 
 * 단점
   * 고객이 모든 단계에 참여하기 때문에 고객은 최종 제품의 요구사항을 변경하여 범위의 복잡성 증가시키고 제품 배송 시간을 늘릴 수 있다.
 
-![프로토타이핑 모델](https://user-images.githubusercontent.com/96015600/167117968-27b31f5b-41de-4284-b53b-42b888d26b8a.png)
+![프로토타이핑 모델](https://user-images.githubusercontent.com/96015600/167117968-27b31f5b-41de-4284-b53b-42b888d26b8a.png) <br>
 출처 : 소프트웨어 공학 [최은만 저, 정익사]
+
+---
+
+### 나선형 모델
+<b>나선형 모델</b>은
+폭포수 모델과 프로토타입 모델의 장점을 더하고 위험 분석 기능을 추가한 모델이다.
+
+나선을 따라 돌듯이 여러 번의 개발 과정을 거쳐서 점진적으로 결과를 완성하여야 한다.
+개발 중에 발생가능한 위험을 관리하며 최소화 하는것이 주된 목적이다. 이때 누락되거나 추가된 요구사항을 첨가하여 진행이 가능하며,
+장밀하고 유지보수 과정이 필요없다.
+
+정리하자면 시스템 개발 시, <b>위험을 최소화하기 위해 점진적으로 완벽한 시스템으로 개발</b>해 나가는 모델이다.
+위험성 감소와 변경에 유연한 대처가 가능하지만 단계 반복에 따른 관리 어려움이 존재한다.
+
+* 장점
+  * 요구사항을 효과적으로 모으고 재정할 수 있다.
+  * 고객의 피드백을 통해 위험 감소
+  * 거대한 규모의 시스템에서 현실적인 접근 가능
+
+* 단점
+  * 관리가 어려움.
+
+![나선형 모델](https://user-images.githubusercontent.com/96015600/168498010-6b3b98fa-8acf-4c33-b41e-3f5a35c133b7.png) <br>
+출처 : 소프트웨어 공학 [최은만 저, 정익사]
+
 ---
 
 ## 마무리
