--- a/TIL/DataScience/01_클러스터링 이론.md
+++ b/TIL/DataScience/01_클러스터링 이론.md
@@ -71,7 +71,7 @@ K-means는 중심점을 기준으로 그룹을 형성하기 때문에, <b>원의
 서로 이웃한 데이터들을 같은 클러스터에 포함시키기 때문에 <b>불특정한 모양</b>의 클러스터가 형성
 
 ---
-### 정답이 없는 클러스터링에 대한 평가 방법리
+### 정답이 없는 클러스터링에 대한 평가 방법
 이미 정답이 있는 분류 문제와 달리 성능 기준을 만들기 어려움
 
 <b> Silhouette Coefficient: 실루엣 계수</b>
