fix: image_path

--- a/TIL/AI/math/02_확률 변수_확률 분포.md
+++ b/TIL/AI/math/02_확률 변수_확률 분포.md
@@ -34,7 +34,7 @@
 ### 확률 분포(probability distribution)
 - 확률 분포란?
 - 각 사건에 어느 정도의 확률이 할당되었는지 표현한 정보
-- 확률 분포를 통해 통계적인 특성을 쉽게 이해할 수 있음.<br>![확률 분포(위키백과).png](image/확률 분포(위키백과).png)
+- 확률 분포를 통해 통계적인 특성을 쉽게 이해할 수 있음.<br>![확률 분포(위키백과).png](https://github.com/dev-jay-yong/TIL-TID-TIW/blob/main/TIL/AI/math/image/%ED%99%95%EB%A5%A0%20%EB%B6%84%ED%8F%AC(%EC%9C%84%ED%82%A4%EB%B0%B1%EA%B3%BC).png?raw=true)
 
 ### 확률 분포 함수(probability distribution function)
 - 확률변수 X가 가지는 값 x에 확률 P(X = x)을 대응시키는 함수를 의미한다.
@@ -85,5 +85,5 @@
 
 ### 확률밀도함수(probability density function, PDF)
 - 확률밀도함수: 연속확률변수가 주어진 구간 내에 포함될 확률을 출력하는 함수
-- 예시로는 정규 분포가 있음.<br>![정규 분포(위키 백과).png](image/정규 분포(위키 백과).png)
+- 예시로는 정규 분포가 있음.<br>![정규 분포(위키 백과).png](https://github.com/dev-jay-yong/TIL-TID-TIW/blob/main/TIL/AI/math/image/%EC%A0%95%EA%B7%9C%20%EB%B6%84%ED%8F%AC(%EC%9C%84%ED%82%A4%20%EB%B0%B1%EA%B3%BC).png?raw=true)
 
