--- a/TIL/AI/math/03_이산확률분포.md
+++ b/TIL/AI/math/03_이산확률분포.md
@@ -5,11 +5,11 @@
 
 ### 베르누이 확률분포
 - 베르누이 확률변수의 분포를 베르누이 확률분포라고 함.
-- 확률변수 X가 베르누이 분포를 따른다고 표현하며, 수식으로는 다음과 같이 표현함.<br>![image.png](image/베르누이_확률분포 수식.png)
+- 확률변수 X가 베르누이 분포를 따른다고 표현하며, 수식으로는 다음과 같이 표현함.<br>![image.png](https://github.com/dev-jay-yong/TIL-TID-TIW/blob/main/TIL/AI/math/image/%EB%B2%A0%EB%A5%B4%EB%88%84%EC%9D%B4_%ED%99%95%EB%A5%A0%EB%B6%84%ED%8F%AC%20%EC%88%98%EC%8B%9D.png?raw=true)
 
 ### 베르누이 분포의 확률질량함수
-- 베르누이 확률 분포의 확률질량함수는 다음과 같음<br>![img.png](image/베르누이 확률 분포의 확률질량함수.png)
-- 이는 간단히 아래와 같은 하나의 수식으로 표현 가능함.<br>![img.png](image/베르누이 확률 분포 간소화.png)
+- 베르누이 확률 분포의 확률질량함수는 다음과 같음<br>![img.png](https://github.com/dev-jay-yong/TIL-TID-TIW/blob/main/TIL/AI/math/image/%EB%B2%A0%EB%A5%B4%EB%88%84%EC%9D%B4%20%ED%99%95%EB%A5%A0%20%EB%B6%84%ED%8F%AC%EC%9D%98%20%ED%99%95%EB%A5%A0%EC%A7%88%EB%9F%89%ED%95%A8%EC%88%98.png?raw=true)
+- 이는 간단히 아래와 같은 하나의 수식으로 표현 가능함.<br>![img.png](https://github.com/dev-jay-yong/TIL-TID-TIW/blob/main/TIL/AI/math/image/%EB%B2%A0%EB%A5%B4%EB%88%84%EC%9D%B4%20%ED%99%95%EB%A5%A0%20%EB%B6%84%ED%8F%AC%20%EA%B0%84%EC%86%8C%ED%99%94.png?raw=true)
 
 ### 이항 분포 개요
 - 베르누이 시행을 N번 반복하는 경우가 있음.
@@ -23,26 +23,26 @@
 - N: 시행 횟수, μ: 한 번의 횟수에서 1이 나올 확률
 
 ### 이항 분포란?
-- 이항 분포 확률 변수X의 확률 질량 함수는 다음과 같음.<br>![img.png](image/이항 분포 확률의 확률 질량 함수.png)
+- 이항 분포 확률 변수X의 확률 질량 함수는 다음과 같음.<br>![img.png](https://github.com/dev-jay-yong/TIL-TID-TIW/blob/main/TIL/AI/math/image/%EC%9D%B4%ED%95%AD%20%EB%B6%84%ED%8F%AC%20%ED%99%95%EB%A5%A0%EC%9D%98%20%ED%99%95%EB%A5%A0%20%EC%A7%88%EB%9F%89%20%ED%95%A8%EC%88%98.png?raw=true)
 - 단, (Nx)는 N개에서 x개를 선택하는 조합의 수와 같다.
 - 단, N! = N * (N-1) ... 2 * 1이다.
 
 ### 이항 분포 공식
 - 독립된 사건을 N번 반복 시행했을 때, 특정 사건이 x회 발생한다고 가정할 때
-- 이항 분포: 아래의 확률값을 그대로 확률 질량 함수로 사용함.<br>![img.png](image/이항 분포 공식.png)
+- 이항 분포: 아래의 확률값을 그대로 확률 질량 함수로 사용함.<br>![img.png](https://github.com/dev-jay-yong/TIL-TID-TIW/blob/main/TIL/AI/math/image/%EC%9D%B4%ED%95%AD%20%EB%B6%84%ED%8F%AC%20%EA%B3%B5%EC%8B%9D.png?raw=true)
 
 ### 이항 분포 예시
 **1. 고양이 분류**
-![img.png](image/고양이 분류 모델.png)
+![img.png](https://github.com/dev-jay-yong/TIL-TID-TIW/blob/main/TIL/AI/math/image/%EA%B3%A0%EC%96%91%EC%9D%B4%20%EB%B6%84%EB%A5%98%20%EB%AA%A8%EB%8D%B8.png?raw=true)
 
 **2. 가구 분류**
-![img.png](image/가구 분류.png)
+![img.png](https://github.com/dev-jay-yong/TIL-TID-TIW/blob/main/TIL/AI/math/image/%EA%B0%80%EA%B5%AC%20%EB%B6%84%EB%A5%98.png?raw=true)
 
 ---
 ### 포아송 분포
 - **일정한 시간** 내 발생하는 사건의 **발생 횟수**에 대한 확률을 계산할 때 사용함.
 - 단위 시간에 어떤 사건이 발생할 기댓값이 λ일 때, 그 사건이 x회 일어날 확률을 구할 수 있음
 - 포아송 분포는 푸아송 분포라고도 불림
-- 포아송 분포의 확률 밀도 함수는 다음과 같음<br>![img.png](image/포아송 분포의 확률 밀도 함수.png)
+- 포아송 분포의 확률 밀도 함수는 다음과 같음<br>![img.png](https://github.com/dev-jay-yong/TIL-TID-TIW/blob/main/TIL/AI/math/image/%ED%8F%AC%EC%95%84%EC%86%A1%20%EB%B6%84%ED%8F%AC%EC%9D%98%20%ED%99%95%EB%A5%A0%20%EB%B0%80%EB%8F%84%20%ED%95%A8%EC%88%98.png?raw=true)
 - 포아송 분포의 평균을 λ로 표기함.
 - e는 자연상수를 의미함 (e = 2.718...)
